[package]
name = "log2"
version = "0.1.4"
edition = "2021"
description = "log2 is an out-of-the-box logging library for Rust"
license = "MIT"
repository = "https://github.com/sweihub/log2"
documentation = "https://docs.rs/log2"

[dependencies]
chrono = "0.4.26"
colored = "2.0.0"
log = { version = "0.4.18", features = ["std"] }
